# sample-auto-review

./: .gitignore  README.md
.github/workflows/: py-lint.yml  python.yml
python/: calculate_average.py  pyproject.toml  test_calculate_average.py
