[tool.poetry]
name = "sample-auto-review"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^24.10.31"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
^/venv/
^/.git/
^/__pycache__/
'''